# windsurf-racen

./: .dockerignore  .env - Copy.example  .gitignore  Dockerfile  README.md  requirements.txt
docs/: Grest_Use_Cases.md  Grest_Use_Cases_Freeform.md  PIPELINE_MAP.md  PIPELINE_SETTINGS.md  Progress_Report_2025-11-09.md  RACEN_Final_MCP_Server.md  SANITY_COMMANDS.md
docs/raas_ack_files/: Code Snippets.md  Codex Instruction Prompt – Implementing RACEN UX v1.md  RACEN Conversational UX Architecture (v1).md
docs/riff/: app.py  app.tsx  pyproject.toml  riff_example.txt
ottomator-agents-main/ai-agent-fundamentals/: .env.example  README.md  agent.py  observability.py  prompt.py  pyproject.toml  requirements.txt
ottomator-agents-main/all-rag-strategies/: README.md
outputs/: RESULTS.txt
scripts/: answer_api.py  backfill_missing_embeddings.py  crawl_and_ingest.py  db_sanity.py  eval_freeform.py  eval_use_cases.py  ingest_url.py  migrate_add_chunk_lines.py  migrate_embeddings_dim_1536.py  migrate_fts.py  persona_test.py  query_regression.py  retriever_api.py  smoke_docling.py  smoke_step1.py  smoke_step2.py  smoke_step2_embed.py  smoke_step2_write.py  smoke_step3 copy.py  smoke_step3.py  step2_process_markdown.py  step4_answer.py  truncate_db.py
src/racen/: __init__.py  crawler.py  log.py  orchestrator.py  step1_fetch_convert.py  step2_embed.py  step2_ingest.py  step2_write.py  step3_retrieve.py
tests/queries/: order_buy.yaml
windsurf-racen-local/: .env.example  .gitignore  README.md  requirements.txt
windsurf-racen-local/.venv312/: pyvenv.cfg
(+35 files in other folders)
